<resources>
    <string name="app_name">NutroBud</string>
    <string name="title_activity_dash">Dash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">NutroBud</string>
    <string name="menu_account">Account</string>
    <string name="menu_blacklist">Blacklist</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact NutroBud</string>
</resources>