<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.nutrobud.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.nutrobud.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_blacklist"
        android:name="com.example.nutrobud.ui.blacklist.BlacklistFragment"
        android:label="@string/menu_blacklist"
        tools:layout="@layout/fragment_blacklist" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.nutrobud.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.nutrobud.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>